# setting-up

./: Makefile  README.md  setting_up
bonus/: CMakeLists.txt  Makefile  setting_up
bonus/.cache/clangd/index/: colors.h.1907D50814336B14.idx  error_handling.c.B0785928F412E7C9.idx  get_map.c.67E5F9B8D0308A9F.idx  get_seed.c.167E8679101B104D.idx  main.c.47AF12135D28F2E4.idx  max.h.C5730F236A692332.idx  my.h.366C272C47BCB2BA.idx  my_compute_power_rec.c.1C3377853CDFDA6F.idx  my_compute_square_root.c.1A763E9197D5D6D4.idx  my_find_prime_sup.c.9C2B01C8F0BDB90A.idx  my_getnbr.c.47DD35AF6A241CEF.idx  my_intlen.c.EF9651E1385BF576.idx  my_is_prime.c.0FAA3C4E5BD027D7.idx  my_isneg.c.7FD29218E07FD9C3.idx  my_put_nbr.c.C63C528BFD4BF7C5.idx  my_putchar.c.112217C109D9C616.idx  my_putstr.c.722871B4BBE6F88D.idx  my_putstrerr.c.ED48B0607381EE2E.idx  my_revstr.c.983F2338C7B36547.idx  my_sort_int_array.c.B0C67DCED53CCC06.idx  my_str_isalpha.c.741335433BFC885B.idx  my_str_islower.c.9FF4CD8CB0EA46CA.idx  my_str_isnum.c.028F8B226671434A.idx  my_str_isprintable.c.C83CC0DF10206940.idx  my_str_isupper.c.952146A8D5135128.idx  my_strcapitalize.c.4BC2D8A3F01A11D6.idx  my_strcat.c.99ED5CEB2D240A82.idx  (+11 more)
bonus/include/: colors.h  max.h  my.h
bonus/lib/my/: my_compute_power_rec.c  my_intlen.c  my_is_prime.c  my_isneg.c  my_revstr.c  my_str_islower.c  my_str_isnum.c  my_str_isprintable.c  my_strcapitalize.c  my_strcat.c  my_strlen.c  my_strlowcase.c  my_strncat.c  my_strncmp.c  my_strncpy.c  my_strstr.c  my_strupcase.c
bonus/src/: error_handling.c  get_map.c  get_seed.c  main.c  solver.c
(+17 files in other folders)
